# Supervised_Challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
DataBase/processed/: class_weights.json  merged_data.csv  test_data.csv  train_data.csv
DataBase/raw/: echonest_features.tsv
models/: results_genre_baselines_full.csv
notebooks/: 1_EDA.ipynb  2_Genre_Original.ipynb  3_Genre_Coarse.ipynb  4.1_Duration.ipynb  4_Duration.ipynb
