[project]
name = "supervised-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[dependency-groups]
de = [
    "tqdm>=4.67.1",
]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
